--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,10 +31,12 @@
             <div class="container-fluid">
               @*   <a class="navbar-brand" asp-area="" asp-controller="GoogleMap" asp-action="CreateArea">Create Location</a> *@
               <div>
-                    <a class="" asp-area="" asp-controller="Home" asp-action="Map">MapBox Area Save</a>
+                   @*  <a class="" asp-area="" asp-controller="Home" asp-action="Map">MapBox Area Save</a> *@
+                    <a class="navbar-brand" asp-area="" asp-controller="GoogleMap" asp-action="Index">Search Location</a>
               </div>
               <div>
-                    <a class="" asp-area="" asp-controller="Home" asp-action="Index">MapBox Area Search</a>
+                    @* <a class="" asp-area="" asp-controller="Home" asp-action="Index">MapBox Area Search</a> *@
+                    <a class="navbar-brand" asp-area="" asp-controller="GoogleMap" asp-action="CreateArea">Create Location</a>
               </div>
              
               
