--- a/Views/GoogleMap/Index.cshtml
+++ b/Views/GoogleMap/Index.cshtml
@@ -8,7 +8,7 @@
 <html>
 <body>
 
-    <h1>My First Google Map</h1>
+    <h1> Map Search</h1>
     <div id="locationDetails" style="margin-top:20px;"></div>
     <div id="locationCode" style="margin-top:20px;"></div>
     <div style="margin-top:20px;" class="d-inline-flex">
