--- a/Views/GoogleMap/MapMarking.cshtml
+++ b/Views/GoogleMap/MapMarking.cshtml
@@ -63,7 +63,7 @@
   
 <body>
 
-    <h1>My First Google Map</h1>
+    <h1>Map Create area</h1>
     <div id="container">
     <div id="controls">
  
